Fix issue with page editor layout scrollbar

--- a/wegas-app/src/main/webapp/wegas-editor/css/wegas-pageeditor.css
+++ b/wegas-app/src/main/webapp/wegas-editor/css/wegas-pageeditor.css
@@ -6,14 +6,14 @@
  * Licensed under the MIT License
 */
 /* Pageeditor Plugin styles */
-.wegas-pageeditor-designmode{
+.wegas-pageeditor-designmode {
     position:relative;
     overflow: hidden;
 }
-.wegas-pageeditor-designmode .wegas-widget{
-    /*box-shadow: 0px 0px 2px green, 0px 0px 2px violet inset !important;*/
+/*.wegas-pageeditor-designmode .wegas-widget{
+    box-shadow: 0px 0px 2px green, 0px 0px 2px violet inset !important;
     overflow: hidden;
-}
+}*/
 .wegas-list,
 .wegas-choicelist,
 .wegas-pageloader{
@@ -171,7 +171,7 @@
 .wegas-pageeditor-layoutmode .timed-hidden-node{
     visibility: visible;
 }
-body > .wegas-pageloader{
+body > .wegas-pageloader {
     position: absolute;
     background: white;
     overflow: auto;
